helm-chart/audit-trail-service/istio/audit-trail-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wasl-trove
  namespace: default
spec:
  gateways:
  - gateway
  hosts:
  - dev-was.dev.meeraspace.com
  http:
  - match:
    - uri:
        prefix: /audit
    - uri:
        prefix: /audit/
    route:
    - destination:
        host: audit-trail-service.dev-meeraspace-wasl.svc.cluster.local
        port:
          number: 8091
